<resources>
    <string name="app_name">Multisports Timer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="threeMin">03:00</string>
    <string name="waiting">Waiting</string>
    <string name="work">WORK!</string>
    <string name="rest">REST!</string>
    <string name="config">Set Up</string>
    <string name="roundNumber"># Rounds:</string>
    <string name="roundTime">Round time:</string>
    <string name="restTime">Rest time:</string>
    <string name="applyChanges">Apply Changes</string>
    <string name="roundsSelected">Rounds Selected:</string>
    <string name="workTimeSelected">Work Time Selected:</string>
    <string name="restTimeSelected">Rest Time Selected:</string>
    <string name="back">Back</string>
    <string name="seleccionado">Seleccionado: </string>



</resources>
