<?xml version="1.0" encoding="utf-8"?>
<!-- TODO -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/LblInfoRoundNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/roundNumber"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner android:id="@+id/CmbRoundNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/LblRoundNumberSelected"
        android:text="@string/seleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/LblInfoRoundTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/roundTime"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner android:id="@+id/CmbRoundTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/LblRoundTimeSelected"
        android:text="@string/seleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/LblInfoRestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/restTime"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner android:id="@+id/CmbRestTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/LblRestTimeSelected"
        android:text="@string/seleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/BtnApplyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/applyChanges" />

    <Button
        android:id="@+id/BtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/back" />

</LinearLayout>