<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/LblTimeDisplayBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/threeMin"
        android:textSize="60sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:numeric="integer"
        android:elegantTextHeight="true"
        />

    <TextView
        android:id="@+id/LblInfoDisplayBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/waiting"
        android:layout_below="@+id/LblTimeDisplayBox"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/BtnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblInfoDisplayBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/start"
        android:textColor="@color/button_material_dark"
        android:typeface="monospace" />

    <Button
        android:id="@+id/BtnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnStart"
        android:layout_marginTop="41dp"
        android:layout_centerHorizontal="true"
        android:text="@string/stop"
        android:textColor="@color/button_material_dark"
        android:typeface="monospace" />
    <Button
        android:id="@+id/BtnSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnStop"
        android:layout_marginTop="41dp"
        android:layout_centerHorizontal="true"
        android:text="@string/config"
        android:textColor="@color/button_material_dark"
        android:typeface="monospace" />

</RelativeLayout>